Fix center aligning

--- a/src/components/CardList/CardList.module.css
+++ b/src/components/CardList/CardList.module.css
@@ -2,4 +2,5 @@
     display: grid;
     grid-template-columns: repeat(4, 200px);
     grid-template-rows: 50px 50px;
+    justify-content: center;
 }
